--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ zara:
         token-validity: 1800 # 30 mins
 spring:
   datasource:
-    url: jdbc:mysql://localhost/zara
+    url: jdbc:mysql://localhost:3366/zara
     username: root
-    password:
+    password: admin
 
   jpa:
     show_sql: true
